<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".Profile"
        tools:showIn="@layout/activity_profile">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="match_parent"
                    android:layout_height="260dp"
                    android:src="@drawable/photo"
                    android:layout_marginTop="20dp"/>



        </FrameLayout>


        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_gravity="center_horizontal" android:forceDarkAllowed="true">

            <TextView
                    android:id="@+id/item_name"
                    style="@style/TextContent.Black"
                    android:textSize="30sp"
                    android:text="@string/my_name"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_alignWithParentIfMissing="false"/>

            <TextView
                    android:id="@+id/item_email"
                    style="@style/TextContent.Black"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:text="@string/my_email"
                    android:layout_marginTop="@dimen/nav_header_vertical_spacing"
                    android:layout_marginBottom="8dp"
                    android:layout_below="@id/item_name"
                    android:layout_width="match_parent"/>

            <TextView
                    android:id="@+id/item_dicoding"
                    style="@style/TextContent.Black"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:text="@string/dicodingSubmission"
                    android:layout_marginTop="@dimen/nav_header_vertical_spacing"
                    android:layout_marginBottom="8dp"
                    android:layout_below="@id/item_email"
                    android:layout_width="match_parent"/>

        </RelativeLayout>



    </LinearLayout>

</androidx.core.widget.NestedScrollView>